parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    WHILE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaraciones
Rule 2     programa -> empty
Rule 3     declaraciones -> declaraciones declaracion
Rule 4     declaraciones -> declaracion
Rule 5     declaracion -> asignacion_multiple
Rule 6     declaracion -> asignacion_multiple_sin_semicolon
Rule 7     declaracion -> asignacion
Rule 8     declaracion -> asignacion_sin_semicolon
Rule 9     declaracion -> mostrar
Rule 10    declaracion -> condicional
Rule 11    declaracion -> bucle_for
Rule 12    declaracion -> unario
Rule 13    declaracion -> unario_sin_semicolon
Rule 14    asignacion -> LET ID ASSIGN expresion SEMICOLON
Rule 15    asignacion -> VAR ID ASSIGN expresion SEMICOLON
Rule 16    asignacion -> CONST ID ASSIGN expresion SEMICOLON
Rule 17    asignacion -> LET ID ASSIGN expresion_array SEMICOLON
Rule 18    asignacion -> CONST ID ASSIGN expresion_array SEMICOLON
Rule 19    asignacion -> VAR ID ASSIGN expresion_array SEMICOLON
Rule 20    asignacion -> LET ID ASSIGN objeto_array SEMICOLON
Rule 21    asignacion -> CONST ID ASSIGN objeto_array SEMICOLON
Rule 22    asignacion -> VAR ID ASSIGN objeto_array SEMICOLON
Rule 23    asignacion_sin_semicolon -> LET ID ASSIGN expresion
Rule 24    asignacion_sin_semicolon -> VAR ID ASSIGN expresion
Rule 25    asignacion_sin_semicolon -> CONST ID ASSIGN expresion
Rule 26    asignacion_sin_semicolon -> LET ID ASSIGN expresion_array
Rule 27    asignacion_sin_semicolon -> CONST ID ASSIGN expresion_array
Rule 28    asignacion_sin_semicolon -> VAR ID ASSIGN expresion_array
Rule 29    asignacion_sin_semicolon -> LET ID ASSIGN objeto_array
Rule 30    asignacion_sin_semicolon -> CONST ID ASSIGN objeto_array
Rule 31    asignacion_sin_semicolon -> VAR ID ASSIGN objeto_array
Rule 32    asignacion_multiple -> LET variables_assign SEMICOLON
Rule 33    asignacion_multiple -> VAR variables_assign SEMICOLON
Rule 34    asignacion_multiple -> CONST variables_assign SEMICOLON
Rule 35    asignacion_multiple_sin_semicolon -> LET variables_assign
Rule 36    asignacion_multiple_sin_semicolon -> VAR variables_assign
Rule 37    asignacion_multiple_sin_semicolon -> CONST variables_assign
Rule 38    variables_assign -> ID
Rule 39    variables_assign -> variables_assign COMMA ID ASSIGN expresion
Rule 40    variables_assign -> variables_assign COMMA ID
Rule 41    mostrar -> CONSOLE PUNTO LOG LPAREN expresion RPAREN
Rule 42    expresion -> valor
Rule 43    expresion -> ID
Rule 44    expresion_array -> LBRACKET RBRACKET
Rule 45    expresion_array -> LBRACKET elementos RBRACKET
Rule 46    elementos -> expresion
Rule 47    elementos -> elementos COMMA expresion
Rule 48    expresion -> ID LBRACKET NUM RBRACKET
Rule 49    objeto_array -> LBRACKET LBRACE RBRACE RBRACKET
Rule 50    objeto_array -> LBRACKET objetos RBRACKET
Rule 51    objetos -> objeto
Rule 52    objetos -> objetos COMMA objeto
Rule 53    objeto -> LBRACE propiedades RBRACE
Rule 54    propiedades -> propiedad
Rule 55    propiedades -> propiedades COMMA propiedad
Rule 56    propiedad -> ID COLON valor
Rule 57    expresion -> ID LBRACKET NUM RBRACKET PUNTO ID
Rule 58    unario -> ID MINUSMINUS SEMICOLON
Rule 59    unario -> ID PLUSPLUS SEMICOLON
Rule 60    unario -> ID ASSIGN expresion SEMICOLON
Rule 61    unario -> ID PLUSEQ expresion SEMICOLON
Rule 62    unario -> ID MINUSEQ expresion SEMICOLON
Rule 63    unario -> ID TIMESEQ expresion SEMICOLON
Rule 64    unario -> ID DIVEQ expresion SEMICOLON
Rule 65    unario -> ID POWEQ expresion SEMICOLON
Rule 66    unario_sin_semicolon -> ID MINUSMINUS
Rule 67    unario_sin_semicolon -> ID PLUSPLUS
Rule 68    unario_sin_semicolon -> ID ASSIGN expresion
Rule 69    unario_sin_semicolon -> ID PLUSEQ expresion
Rule 70    unario_sin_semicolon -> ID MINUSEQ expresion
Rule 71    unario_sin_semicolon -> ID TIMESEQ expresion
Rule 72    unario_sin_semicolon -> ID DIVEQ expresion
Rule 73    unario_sin_semicolon -> ID POWEQ expresion
Rule 74    expresion -> expresion OPERADOR expresion
Rule 75    valor -> NUM
Rule 76    valor -> STRING
Rule 77    condicional -> IF LPAREN comparacion RPAREN LBRACE declaraciones RBRACE else_if_blocks else_block
Rule 78    else_block -> ELSE LBRACE declaraciones RBRACE
Rule 79    else_block -> empty
Rule 80    else_if_blocks -> empty
Rule 81    else_if_blocks -> else_if_blocks else_if_block
Rule 82    else_if_block -> ELSE IF LPAREN comparacion RPAREN LBRACE declaraciones RBRACE
Rule 83    comparacion -> expresion EQUAL expresion
Rule 84    comparacion -> expresion LESS expresion
Rule 85    comparacion -> expresion GREATER expresion
Rule 86    comparacion -> expresion LESSEQUAL expresion
Rule 87    comparacion -> expresion GREATEQUAL expresion
Rule 88    comparacion -> expresion NOTEQUAL expresion
Rule 89    comparacion -> comparacion OR comparacion
Rule 90    comparacion -> comparacion AND comparacion
Rule 91    bucle_for -> FOR LPAREN asignacion SEMICOLON comparacion SEMICOLON unario RPAREN LBRACE declaraciones RBRACE
Rule 92    empty -> <empty>

Terminals, with rules where they appear

AND                  : 90
ASSIGN               : 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 39 60 68
COLON                : 56
COMMA                : 39 40 47 52 55
CONSOLE              : 41
CONST                : 16 18 21 25 27 30 34 37
DIVEQ                : 64 72
ELSE                 : 78 82
EQUAL                : 83
FOR                  : 91
GREATEQUAL           : 87
GREATER              : 85
ID                   : 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 38 39 40 43 48 56 57 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
IF                   : 77 82
LBRACE               : 49 53 77 78 82 91
LBRACKET             : 44 45 48 49 50 57
LESS                 : 84
LESSEQUAL            : 86
LET                  : 14 17 20 23 26 29 32 35
LOG                  : 41
LPAREN               : 41 77 82 91
MINUSEQ              : 62 70
MINUSMINUS           : 58 66
NOTEQUAL             : 88
NUM                  : 48 57 75
OPERADOR             : 74
OR                   : 89
PLUSEQ               : 61 69
PLUSPLUS             : 59 67
POWEQ                : 65 73
PUNTO                : 41 57
RBRACE               : 49 53 77 78 82 91
RBRACKET             : 44 45 48 49 50 57
RPAREN               : 41 77 82 91
SEMICOLON            : 14 15 16 17 18 19 20 21 22 32 33 34 58 59 60 61 62 63 64 65 91 91
STRING               : 76
TIMESEQ              : 63 71
VAR                  : 15 19 22 24 28 31 33 36
WHILE                : 
error                : 

Nonterminals, with rules where they appear

asignacion           : 7 91
asignacion_multiple  : 5
asignacion_multiple_sin_semicolon : 6
asignacion_sin_semicolon : 8
bucle_for            : 11
comparacion          : 77 82 89 89 90 90 91
condicional          : 10
declaracion          : 3 4
declaraciones        : 1 3 77 78 82 91
elementos            : 45 47
else_block           : 77
else_if_block        : 81
else_if_blocks       : 77 81
empty                : 2 79 80
expresion            : 14 15 16 23 24 25 39 41 46 47 60 61 62 63 64 65 68 69 70 71 72 73 74 74 83 83 84 84 85 85 86 86 87 87 88 88
expresion_array      : 17 18 19 26 27 28
mostrar              : 9
objeto               : 51 52
objeto_array         : 20 21 22 29 30 31
objetos              : 50 52
programa             : 0
propiedad            : 54 55
propiedades          : 53 55
unario               : 12 91
unario_sin_semicolon : 13
valor                : 42 56
variables_assign     : 32 33 34 35 36 37 39 40

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaraciones
    (2) programa -> . empty
    (3) declaraciones -> . declaraciones declaracion
    (4) declaraciones -> . declaracion
    (92) empty -> .
    (5) declaracion -> . asignacion_multiple
    (6) declaracion -> . asignacion_multiple_sin_semicolon
    (7) declaracion -> . asignacion
    (8) declaracion -> . asignacion_sin_semicolon
    (9) declaracion -> . mostrar
    (10) declaracion -> . condicional
    (11) declaracion -> . bucle_for
    (12) declaracion -> . unario
    (13) declaracion -> . unario_sin_semicolon
    (32) asignacion_multiple -> . LET variables_assign SEMICOLON
    (33) asignacion_multiple -> . VAR variables_assign SEMICOLON
    (34) asignacion_multiple -> . CONST variables_assign SEMICOLON
    (35) asignacion_multiple_sin_semicolon -> . LET variables_assign
    (36) asignacion_multiple_sin_semicolon -> . VAR variables_assign
    (37) asignacion_multiple_sin_semicolon -> . CONST variables_assign
    (14) asignacion -> . LET ID ASSIGN expresion SEMICOLON
    (15) asignacion -> . VAR ID ASSIGN expresion SEMICOLON
    (16) asignacion -> . CONST ID ASSIGN expresion SEMICOLON
    (17) asignacion -> . LET ID ASSIGN expresion_array SEMICOLON
    (18) asignacion -> . CONST ID ASSIGN expresion_array SEMICOLON
    (19) asignacion -> . VAR ID ASSIGN expresion_array SEMICOLON
    (20) asignacion -> . LET ID ASSIGN objeto_array SEMICOLON
    (21) asignacion -> . CONST ID ASSIGN objeto_array SEMICOLON
    (22) asignacion -> . VAR ID ASSIGN objeto_array SEMICOLON
    (23) asignacion_sin_semicolon -> . LET ID ASSIGN expresion
    (24) asignacion_sin_semicolon -> . VAR ID ASSIGN expresion
    (25) asignacion_sin_semicolon -> . CONST ID ASSIGN expresion
    (26) asignacion_sin_semicolon -> . LET ID ASSIGN expresion_array
    (27) asignacion_sin_semicolon -> . CONST ID ASSIGN expresion_array
    (28) asignacion_sin_semicolon -> . VAR ID ASSIGN expresion_array
    (29) asignacion_sin_semicolon -> . LET ID ASSIGN objeto_array
    (30) asignacion_sin_semicolon -> . CONST ID ASSIGN objeto_array
    (31) asignacion_sin_semicolon -> . VAR ID ASSIGN objeto_array
    (41) mostrar -> . CONSOLE PUNTO LOG LPAREN expresion RPAREN
    (77) condicional -> . IF LPAREN comparacion RPAREN LBRACE declaraciones RBRACE else_if_blocks else_block
    (91) bucle_for -> . FOR LPAREN asignacion SEMICOLON comparacion SEMICOLON unario RPAREN LBRACE declaraciones RBRACE
    (58) unario -> . ID MINUSMINUS SEMICOLON
    (59) unario -> . ID PLUSPLUS SEMICOLON
    (60) unario -> . ID ASSIGN expresion SEMICOLON
    (61) unario -> . ID PLUSEQ expresion SEMICOLON
    (62) unario -> . ID MINUSEQ expresion SEMICOLON
    (63) unario -> . ID TIMESEQ expresion SEMICOLON
    (64) unario -> . ID DIVEQ expresion SEMICOLON
    (65) unario -> . ID POWEQ expresion SEMICOLON
    (66) unario_sin_semicolon -> . ID MINUSMINUS
    (67) unario_sin_semicolon -> . ID PLUSPLUS
    (68) unario_sin_semicolon -> . ID ASSIGN expresion
    (69) unario_sin_semicolon -> . ID PLUSEQ expresion
    (70) unario_sin_semicolon -> . ID MINUSEQ expresion
    (71) unario_sin_semicolon -> . ID TIMESEQ expresion
    (72) unario_sin_semicolon -> . ID DIVEQ expresion
    (73) unario_sin_semicolon -> . ID POWEQ expresion

    $end            reduce using rule 92 (empty -> .)
    LET             shift and go to state 14
    VAR             shift and go to state 15
    CONST           shift and go to state 16
    CONSOLE         shift and go to state 18
    IF              shift and go to state 19
    FOR             shift and go to state 20
    ID              shift and go to state 17

    programa                       shift and go to state 1
    declaraciones                  shift and go to state 2
    empty                          shift and go to state 3
    declaracion                    shift and go to state 4
    asignacion_multiple            shift and go to state 5
    asignacion_multiple_sin_semicolon shift and go to state 6
    asignacion                     shift and go to state 7
    asignacion_sin_semicolon       shift and go to state 8
    mostrar                        shift and go to state 9
    condicional                    shift and go to state 10
    bucle_for                      shift and go to state 11
    unario                         shift and go to state 12
    unario_sin_semicolon           shift and go to state 13

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaraciones .
    (3) declaraciones -> declaraciones . declaracion
    (5) declaracion -> . asignacion_multiple
    (6) declaracion -> . asignacion_multiple_sin_semicolon
    (7) declaracion -> . asignacion
    (8) declaracion -> . asignacion_sin_semicolon
    (9) declaracion -> . mostrar
    (10) declaracion -> . condicional
    (11) declaracion -> . bucle_for
    (12) declaracion -> . unario
    (13) declaracion -> . unario_sin_semicolon
    (32) asignacion_multiple -> . LET variables_assign SEMICOLON
    (33) asignacion_multiple -> . VAR variables_assign SEMICOLON
    (34) asignacion_multiple -> . CONST variables_assign SEMICOLON
    (35) asignacion_multiple_sin_semicolon -> . LET variables_assign
    (36) asignacion_multiple_sin_semicolon -> . VAR variables_assign
    (37) asignacion_multiple_sin_semicolon -> . CONST variables_assign
    (14) asignacion -> . LET ID ASSIGN expresion SEMICOLON
    (15) asignacion -> . VAR ID ASSIGN expresion SEMICOLON
    (16) asignacion -> . CONST ID ASSIGN expresion SEMICOLON
    (17) asignacion -> . LET ID ASSIGN expresion_array SEMICOLON
    (18) asignacion -> . CONST ID ASSIGN expresion_array SEMICOLON
    (19) asignacion -> . VAR ID ASSIGN expresion_array SEMICOLON
    (20) asignacion -> . LET ID ASSIGN objeto_array SEMICOLON
    (21) asignacion -> . CONST ID ASSIGN objeto_array SEMICOLON
    (22) asignacion -> . VAR ID ASSIGN objeto_array SEMICOLON
    (23) asignacion_sin_semicolon -> . LET ID ASSIGN expresion
    (24) asignacion_sin_semicolon -> . VAR ID ASSIGN expresion
    (25) asignacion_sin_semicolon -> . CONST ID ASSIGN expresion
    (26) asignacion_sin_semicolon -> . LET ID ASSIGN expresion_array
    (27) asignacion_sin_semicolon -> . CONST ID ASSIGN expresion_array
    (28) asignacion_sin_semicolon -> . VAR ID ASSIGN expresion_array
    (29) asignacion_sin_semicolon -> . LET ID ASSIGN objeto_array
    (30) asignacion_sin_semicolon -> . CONST ID ASSIGN objeto_array
    (31) asignacion_sin_semicolon -> . VAR ID ASSIGN objeto_array
    (41) mostrar -> . CONSOLE PUNTO LOG LPAREN expresion RPAREN
    (77) condicional -> . IF LPAREN comparacion RPAREN LBRACE declaraciones RBRACE else_if_blocks else_block
    (91) bucle_for -> . FOR LPAREN asignacion SEMICOLON comparacion SEMICOLON unario RPAREN LBRACE declaraciones RBRACE
    (58) unario -> . ID MINUSMINUS SEMICOLON
    (59) unario -> . ID PLUSPLUS SEMICOLON
    (60) unario -> . ID ASSIGN expresion SEMICOLON
    (61) unario -> . ID PLUSEQ expresion SEMICOLON
    (62) unario -> . ID MINUSEQ expresion SEMICOLON
    (63) unario -> . ID TIMESEQ expresion SEMICOLON
    (64) unario -> . ID DIVEQ expresion SEMICOLON
    (65) unario -> . ID POWEQ expresion SEMICOLON
    (66) unario_sin_semicolon -> . ID MINUSMINUS
    (67) unario_sin_semicolon -> . ID PLUSPLUS
    (68) unario_sin_semicolon -> . ID ASSIGN expresion
    (69) unario_sin_semicolon -> . ID PLUSEQ expresion
    (70) unario_sin_semicolon -> . ID MINUSEQ expresion
    (71) unario_sin_semicolon -> . ID TIMESEQ expresion
    (72) unario_sin_semicolon -> . ID DIVEQ expresion
    (73) unario_sin_semicolon -> . ID POWEQ expresion

    $end            reduce using rule 1 (programa -> declaraciones .)
    LET             shift and go to state 14
    VAR             shift and go to state 15
    CONST           shift and go to state 16
    CONSOLE         shift and go to state 18
    IF              shift and go to state 19
    FOR             shift and go to state 20
    ID              shift and go to state 17

    declaracion                    shift and go to state 21
    asignacion_multiple            shift and go to state 5
    asignacion_multiple_sin_semicolon shift and go to state 6
    asignacion                     shift and go to state 7
    asignacion_sin_semicolon       shift and go to state 8
    mostrar                        shift and go to state 9
    condicional                    shift and go to state 10
    bucle_for                      shift and go to state 11
    unario                         shift and go to state 12
    unario_sin_semicolon           shift and go to state 13

state 3

    (2) programa -> empty .

    $end            reduce using rule 2 (programa -> empty .)


state 4

    (4) declaraciones -> declaracion .

    LET             reduce using rule 4 (declaraciones -> declaracion .)
    VAR             reduce using rule 4 (declaraciones -> declaracion .)
    CONST           reduce using rule 4 (declaraciones -> declaracion .)
    CONSOLE         reduce using rule 4 (declaraciones -> declaracion .)
    IF              reduce using rule 4 (declaraciones -> declaracion .)
    FOR             reduce using rule 4 (declaraciones -> declaracion .)
    ID              reduce using rule 4 (declaraciones -> declaracion .)
    $end            reduce using rule 4 (declaraciones -> declaracion .)
    RBRACE          reduce using rule 4 (declaraciones -> declaracion .)


state 5

    (5) declaracion -> asignacion_multiple .

    LET             reduce using rule 5 (declaracion -> asignacion_multiple .)
    VAR             reduce using rule 5 (declaracion -> asignacion_multiple .)
    CONST           reduce using rule 5 (declaracion -> asignacion_multiple .)
    CONSOLE         reduce using rule 5 (declaracion -> asignacion_multiple .)
    IF              reduce using rule 5 (declaracion -> asignacion_multiple .)
    FOR             reduce using rule 5 (declaracion -> asignacion_multiple .)
    ID              reduce using rule 5 (declaracion -> asignacion_multiple .)
    $end            reduce using rule 5 (declaracion -> asignacion_multiple .)
    RBRACE          reduce using rule 5 (declaracion -> asignacion_multiple .)


state 6

    (6) declaracion -> asignacion_multiple_sin_semicolon .

    LET             reduce using rule 6 (declaracion -> asignacion_multiple_sin_semicolon .)
    VAR             reduce using rule 6 (declaracion -> asignacion_multiple_sin_semicolon .)
    CONST           reduce using rule 6 (declaracion -> asignacion_multiple_sin_semicolon .)
    CONSOLE         reduce using rule 6 (declaracion -> asignacion_multiple_sin_semicolon .)
    IF              reduce using rule 6 (declaracion -> asignacion_multiple_sin_semicolon .)
    FOR             reduce using rule 6 (declaracion -> asignacion_multiple_sin_semicolon .)
    ID              reduce using rule 6 (declaracion -> asignacion_multiple_sin_semicolon .)
    $end            reduce using rule 6 (declaracion -> asignacion_multiple_sin_semicolon .)
    RBRACE          reduce using rule 6 (declaracion -> asignacion_multiple_sin_semicolon .)


state 7

    (7) declaracion -> asignacion .

    LET             reduce using rule 7 (declaracion -> asignacion .)
    VAR             reduce using rule 7 (declaracion -> asignacion .)
    CONST           reduce using rule 7 (declaracion -> asignacion .)
    CONSOLE         reduce using rule 7 (declaracion -> asignacion .)
    IF              reduce using rule 7 (declaracion -> asignacion .)
    FOR             reduce using rule 7 (declaracion -> asignacion .)
    ID              reduce using rule 7 (declaracion -> asignacion .)
    $end            reduce using rule 7 (declaracion -> asignacion .)
    RBRACE          reduce using rule 7 (declaracion -> asignacion .)


state 8

    (8) declaracion -> asignacion_sin_semicolon .

    LET             reduce using rule 8 (declaracion -> asignacion_sin_semicolon .)
    VAR             reduce using rule 8 (declaracion -> asignacion_sin_semicolon .)
    CONST           reduce using rule 8 (declaracion -> asignacion_sin_semicolon .)
    CONSOLE         reduce using rule 8 (declaracion -> asignacion_sin_semicolon .)
    IF              reduce using rule 8 (declaracion -> asignacion_sin_semicolon .)
    FOR             reduce using rule 8 (declaracion -> asignacion_sin_semicolon .)
    ID              reduce using rule 8 (declaracion -> asignacion_sin_semicolon .)
    $end            reduce using rule 8 (declaracion -> asignacion_sin_semicolon .)
    RBRACE          reduce using rule 8 (declaracion -> asignacion_sin_semicolon .)


state 9

    (9) declaracion -> mostrar .

    LET             reduce using rule 9 (declaracion -> mostrar .)
    VAR             reduce using rule 9 (declaracion -> mostrar .)
    CONST           reduce using rule 9 (declaracion -> mostrar .)
    CONSOLE         reduce using rule 9 (declaracion -> mostrar .)
    IF              reduce using rule 9 (declaracion -> mostrar .)
    FOR             reduce using rule 9 (declaracion -> mostrar .)
    ID              reduce using rule 9 (declaracion -> mostrar .)
    $end            reduce using rule 9 (declaracion -> mostrar .)
    RBRACE          reduce using rule 9 (declaracion -> mostrar .)


state 10

    (10) declaracion -> condicional .

    LET             reduce using rule 10 (declaracion -> condicional .)
    VAR             reduce using rule 10 (declaracion -> condicional .)
    CONST           reduce using rule 10 (declaracion -> condicional .)
    CONSOLE         reduce using rule 10 (declaracion -> condicional .)
    IF              reduce using rule 10 (declaracion -> condicional .)
    FOR             reduce using rule 10 (declaracion -> condicional .)
    ID              reduce using rule 10 (declaracion -> condicional .)
    $end            reduce using rule 10 (declaracion -> condicional .)
    RBRACE          reduce using rule 10 (declaracion -> condicional .)


state 11

    (11) declaracion -> bucle_for .

    LET             reduce using rule 11 (declaracion -> bucle_for .)
    VAR             reduce using rule 11 (declaracion -> bucle_for .)
    CONST           reduce using rule 11 (declaracion -> bucle_for .)
    CONSOLE         reduce using rule 11 (declaracion -> bucle_for .)
    IF              reduce using rule 11 (declaracion -> bucle_for .)
    FOR             reduce using rule 11 (declaracion -> bucle_for .)
    ID              reduce using rule 11 (declaracion -> bucle_for .)
    $end            reduce using rule 11 (declaracion -> bucle_for .)
    RBRACE          reduce using rule 11 (declaracion -> bucle_for .)


state 12

    (12) declaracion -> unario .

    LET             reduce using rule 12 (declaracion -> unario .)
    VAR             reduce using rule 12 (declaracion -> unario .)
    CONST           reduce using rule 12 (declaracion -> unario .)
    CONSOLE         reduce using rule 12 (declaracion -> unario .)
    IF              reduce using rule 12 (declaracion -> unario .)
    FOR             reduce using rule 12 (declaracion -> unario .)
    ID              reduce using rule 12 (declaracion -> unario .)
    $end            reduce using rule 12 (declaracion -> unario .)
    RBRACE          reduce using rule 12 (declaracion -> unario .)


state 13

    (13) declaracion -> unario_sin_semicolon .

    LET             reduce using rule 13 (declaracion -> unario_sin_semicolon .)
    VAR             reduce using rule 13 (declaracion -> unario_sin_semicolon .)
    CONST           reduce using rule 13 (declaracion -> unario_sin_semicolon .)
    CONSOLE         reduce using rule 13 (declaracion -> unario_sin_semicolon .)
    IF              reduce using rule 13 (declaracion -> unario_sin_semicolon .)
    FOR             reduce using rule 13 (declaracion -> unario_sin_semicolon .)
    ID              reduce using rule 13 (declaracion -> unario_sin_semicolon .)
    $end            reduce using rule 13 (declaracion -> unario_sin_semicolon .)
    RBRACE          reduce using rule 13 (declaracion -> unario_sin_semicolon .)


state 14

    (32) asignacion_multiple -> LET . variables_assign SEMICOLON
    (35) asignacion_multiple_sin_semicolon -> LET . variables_assign
    (14) asignacion -> LET . ID ASSIGN expresion SEMICOLON
    (17) asignacion -> LET . ID ASSIGN expresion_array SEMICOLON
    (20) asignacion -> LET . ID ASSIGN objeto_array SEMICOLON
    (23) asignacion_sin_semicolon -> LET . ID ASSIGN expresion
    (26) asignacion_sin_semicolon -> LET . ID ASSIGN expresion_array
    (29) asignacion_sin_semicolon -> LET . ID ASSIGN objeto_array
    (38) variables_assign -> . ID
    (39) variables_assign -> . variables_assign COMMA ID ASSIGN expresion
    (40) variables_assign -> . variables_assign COMMA ID

    ID              shift and go to state 23

    variables_assign               shift and go to state 22

state 15

    (33) asignacion_multiple -> VAR . variables_assign SEMICOLON
    (36) asignacion_multiple_sin_semicolon -> VAR . variables_assign
    (15) asignacion -> VAR . ID ASSIGN expresion SEMICOLON
    (19) asignacion -> VAR . ID ASSIGN expresion_array SEMICOLON
    (22) asignacion -> VAR . ID ASSIGN objeto_array SEMICOLON
    (24) asignacion_sin_semicolon -> VAR . ID ASSIGN expresion
    (28) asignacion_sin_semicolon -> VAR . ID ASSIGN expresion_array
    (31) asignacion_sin_semicolon -> VAR . ID ASSIGN objeto_array
    (38) variables_assign -> . ID
    (39) variables_assign -> . variables_assign COMMA ID ASSIGN expresion
    (40) variables_assign -> . variables_assign COMMA ID

    ID              shift and go to state 25

    variables_assign               shift and go to state 24

state 16

    (34) asignacion_multiple -> CONST . variables_assign SEMICOLON
    (37) asignacion_multiple_sin_semicolon -> CONST . variables_assign
    (16) asignacion -> CONST . ID ASSIGN expresion SEMICOLON
    (18) asignacion -> CONST . ID ASSIGN expresion_array SEMICOLON
    (21) asignacion -> CONST . ID ASSIGN objeto_array SEMICOLON
    (25) asignacion_sin_semicolon -> CONST . ID ASSIGN expresion
    (27) asignacion_sin_semicolon -> CONST . ID ASSIGN expresion_array
    (30) asignacion_sin_semicolon -> CONST . ID ASSIGN objeto_array
    (38) variables_assign -> . ID
    (39) variables_assign -> . variables_assign COMMA ID ASSIGN expresion
    (40) variables_assign -> . variables_assign COMMA ID

    ID              shift and go to state 27

    variables_assign               shift and go to state 26

state 17

    (58) unario -> ID . MINUSMINUS SEMICOLON
    (59) unario -> ID . PLUSPLUS SEMICOLON
    (60) unario -> ID . ASSIGN expresion SEMICOLON
    (61) unario -> ID . PLUSEQ expresion SEMICOLON
    (62) unario -> ID . MINUSEQ expresion SEMICOLON
    (63) unario -> ID . TIMESEQ expresion SEMICOLON
    (64) unario -> ID . DIVEQ expresion SEMICOLON
    (65) unario -> ID . POWEQ expresion SEMICOLON
    (66) unario_sin_semicolon -> ID . MINUSMINUS
    (67) unario_sin_semicolon -> ID . PLUSPLUS
    (68) unario_sin_semicolon -> ID . ASSIGN expresion
    (69) unario_sin_semicolon -> ID . PLUSEQ expresion
    (70) unario_sin_semicolon -> ID . MINUSEQ expresion
    (71) unario_sin_semicolon -> ID . TIMESEQ expresion
    (72) unario_sin_semicolon -> ID . DIVEQ expresion
    (73) unario_sin_semicolon -> ID . POWEQ expresion

    MINUSMINUS      shift and go to state 28
    PLUSPLUS        shift and go to state 29
    ASSIGN          shift and go to state 30
    PLUSEQ          shift and go to state 31
    MINUSEQ         shift and go to state 32
    TIMESEQ         shift and go to state 33
    DIVEQ           shift and go to state 34
    POWEQ           shift and go to state 35


state 18

    (41) mostrar -> CONSOLE . PUNTO LOG LPAREN expresion RPAREN

    PUNTO           shift and go to state 36


state 19

    (77) condicional -> IF . LPAREN comparacion RPAREN LBRACE declaraciones RBRACE else_if_blocks else_block

    LPAREN          shift and go to state 37


state 20

    (91) bucle_for -> FOR . LPAREN asignacion SEMICOLON comparacion SEMICOLON unario RPAREN LBRACE declaraciones RBRACE

    LPAREN          shift and go to state 38


state 21

    (3) declaraciones -> declaraciones declaracion .

    LET             reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    VAR             reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    CONST           reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    CONSOLE         reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    IF              reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    FOR             reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    ID              reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    $end            reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    RBRACE          reduce using rule 3 (declaraciones -> declaraciones declaracion .)


state 22

    (32) asignacion_multiple -> LET variables_assign . SEMICOLON
    (35) asignacion_multiple_sin_semicolon -> LET variables_assign .
    (39) variables_assign -> variables_assign . COMMA ID ASSIGN expresion
    (40) variables_assign -> variables_assign . COMMA ID

    SEMICOLON       shift and go to state 39
    LET             reduce using rule 35 (asignacion_multiple_sin_semicolon -> LET variables_assign .)
    VAR             reduce using rule 35 (asignacion_multiple_sin_semicolon -> LET variables_assign .)
    CONST           reduce using rule 35 (asignacion_multiple_sin_semicolon -> LET variables_assign .)
    CONSOLE         reduce using rule 35 (asignacion_multiple_sin_semicolon -> LET variables_assign .)
    IF              reduce using rule 35 (asignacion_multiple_sin_semicolon -> LET variables_assign .)
    FOR             reduce using rule 35 (asignacion_multiple_sin_semicolon -> LET variables_assign .)
    ID              reduce using rule 35 (asignacion_multiple_sin_semicolon -> LET variables_assign .)
    $end            reduce using rule 35 (asignacion_multiple_sin_semicolon -> LET variables_assign .)
    RBRACE          reduce using rule 35 (asignacion_multiple_sin_semicolon -> LET variables_assign .)
    COMMA           shift and go to state 40


state 23

    (14) asignacion -> LET ID . ASSIGN expresion SEMICOLON
    (17) asignacion -> LET ID . ASSIGN expresion_array SEMICOLON
    (20) asignacion -> LET ID . ASSIGN objeto_array SEMICOLON
    (23) asignacion_sin_semicolon -> LET ID . ASSIGN expresion
    (26) asignacion_sin_semicolon -> LET ID . ASSIGN expresion_array
    (29) asignacion_sin_semicolon -> LET ID . ASSIGN objeto_array
    (38) variables_assign -> ID .

    ASSIGN          shift and go to state 41
    SEMICOLON       reduce using rule 38 (variables_assign -> ID .)
    COMMA           reduce using rule 38 (variables_assign -> ID .)
    LET             reduce using rule 38 (variables_assign -> ID .)
    VAR             reduce using rule 38 (variables_assign -> ID .)
    CONST           reduce using rule 38 (variables_assign -> ID .)
    CONSOLE         reduce using rule 38 (variables_assign -> ID .)
    IF              reduce using rule 38 (variables_assign -> ID .)
    FOR             reduce using rule 38 (variables_assign -> ID .)
    ID              reduce using rule 38 (variables_assign -> ID .)
    $end            reduce using rule 38 (variables_assign -> ID .)
    RBRACE          reduce using rule 38 (variables_assign -> ID .)


state 24

    (33) asignacion_multiple -> VAR variables_assign . SEMICOLON
    (36) asignacion_multiple_sin_semicolon -> VAR variables_assign .
    (39) variables_assign -> variables_assign . COMMA ID ASSIGN expresion
    (40) variables_assign -> variables_assign . COMMA ID

    SEMICOLON       shift and go to state 42
    LET             reduce using rule 36 (asignacion_multiple_sin_semicolon -> VAR variables_assign .)
    VAR             reduce using rule 36 (asignacion_multiple_sin_semicolon -> VAR variables_assign .)
    CONST           reduce using rule 36 (asignacion_multiple_sin_semicolon -> VAR variables_assign .)
    CONSOLE         reduce using rule 36 (asignacion_multiple_sin_semicolon -> VAR variables_assign .)
    IF              reduce using rule 36 (asignacion_multiple_sin_semicolon -> VAR variables_assign .)
    FOR             reduce using rule 36 (asignacion_multiple_sin_semicolon -> VAR variables_assign .)
    ID              reduce using rule 36 (asignacion_multiple_sin_semicolon -> VAR variables_assign .)
    $end            reduce using rule 36 (asignacion_multiple_sin_semicolon -> VAR variables_assign .)
    RBRACE          reduce using rule 36 (asignacion_multiple_sin_semicolon -> VAR variables_assign .)
    COMMA           shift and go to state 40


state 25
